feat: add TagBox component

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -3,7 +3,7 @@
 #hero {
     background-image: url("../../assets/heroBanner.png");
     background-color: #f3f3f7;
-    height: 90vh;
+    height: 95vh;
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -28,6 +28,7 @@
     background-color: #FFFFFF;
     border-radius: 10px;
     border: 0;
+    font-size: 1.2vw;
     padding: 14px 80px;
     text-decoration: none;
 }
@@ -39,32 +40,4 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-
-#tag .tag-box {
-    width: 180px;
-    text-align: center;
-    padding: 25px 15px;
-    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
-    border: 1px solid #a193a9;
-    border-radius: 4px;
-    margin: 15px 0;
-}
-
-#tag .tag-box:hover  {
-    box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.01);
-}
-
-#tag .tag-box img {
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-#tag .tag-box h6 {
-    display: inline-block;
-    padding: 9px 8px 6px 8px;
-    line-height: 0;
-    border-radius: 4px;
-    color: #755a84;
-    background-color: #f3f3f7;
 }
