--- a/src/index.css
+++ b/src/index.css
@@ -8,19 +8,20 @@
 }
 
 h1 {
-  font-size: 50px;
-  line-height: 64px;
+  font-size: 5vw;
+  line-height: 1em;
   color: #222;
 }
 
 h2 {
-  font-size: 46px;
-  line-height: 54px;
+  font-size: 4.6vw;
+  line-height: 1em;
   color: #222;
 }
 
 h4 {
-  font-size: 20px;
+  font-size: 2vw;
+  line-height: 1.2em;
   color: #222;
 }
 
@@ -30,8 +31,9 @@ h6 {
 }
 
 p {
-  font-size: 16px;
+  font-size: 1.6vw;
   color: #222;
+  line-height: 1.25em;
   margin: 15px 0 20px 0;
 }
 
