--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,9 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 80px;
+    padding: 1.6vw 6.25vw;
     background: #f3f3f7;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    box-shadow: 0 0.4vw 1.2vw rgba(0, 0, 0, 0.06);
     z-index: 999;
     position: sticky;
     top: 0;
@@ -19,13 +19,13 @@
 
 #navbar li {
     list-style: none;
-    padding: 0 20px;
+    padding: 0 1.6vw;
     position: relative;
 }
 
 #navbar li a {
     text-decoration: none;
-    font-size: 16px;
+    font-size: 1.25vw;
     font-weight: 600;
     color: #1A1A1A;
     transition: 0.3s ease;
@@ -40,9 +40,9 @@
 #navbar li a:hover::after {
     content: "";
     width: 30%;
-    height: 2px;
+    height: 0.15vw;
     background: #755a84;
     position: absolute;
-    bottom: -4px;
-    left: 20px;
+    bottom: -0.3vw;
+    left: 1.6vw;
 }
