--- a/src/components/TagBox/TagBox.css
+++ b/src/components/TagBox/TagBox.css
@@ -14,34 +14,39 @@
 
 #tag .tag-box img {
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 0.8vw;
 }
 
 #tag .tag-box h6 {
     display: inline-block;
-    padding: 9px 8px 6px 8px;
+    padding: 0.5vw 0.6vw 0.4vw 0.6vw;
     line-height: 1;
-    border-radius: 4px;
+    border-radius: 0.3vw;
+    font-size: 1vw;
     color: #088178;
+
+}
+
+#tag .tag-box:nth-child(1) {
     background-color: #FDDDE4;
 }
 
-#tag .tag-box:nth-child(2) h6 {
+#tag .tag-box:nth-child(2) {
     background-color: #CDEBBC;
 }
 
-#tag .tag-box:nth-child(3) h6 {
+#tag .tag-box:nth-child(3){
     background-color: #D1E8F2;
 }
 
-#tag .tag-box:nth-child(4) h6 {
+#tag .tag-box:nth-child(4){
     background-color: #CDD4F8;
 }
 
-#tag .tag-box:nth-child(5) h6 {
+#tag .tag-box:nth-child(5) {
     background-color: #F6DBF6;
 }
 
-#tag .tag-box:nth-child(6) h6 {
+#tag .tag-box:nth-child(6) {
     background-color: #FFF2E5 ;
 }
