--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -56,3 +56,11 @@
     padding-top: 20px;
     flex-wrap: wrap;
 }
+
+/* News Section */
+
+#news {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
